--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "express-fileupload": "^1.3.1",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
