--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/node": "17.0.16",
     "prisma": "3.9.1",
     "ts-node": "10.5.0",
