--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.0",
     "express": "4.17.2",
     "express-fileupload": "^1.3.1",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "node-fetch": "2"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
