--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/node": "17.0.16",
