--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/node": "17.0.16",
